--- a/article/app/views/fragments/articleBody.scala.html
+++ b/article/app/views/fragments/articleBody.scala.html
@@ -61,6 +61,10 @@
             @fragments.social(article)
         </div>
 
+        <div class="article__right-column">
+
+        </div>
+
     </article>
 
 
