--- a/identity/app/views/reset_password.scala.html
+++ b/identity/app/views/reset_password.scala.html
@@ -1,6 +1,7 @@
 @(page: MetaData, idRequest: services.IdentityRequest, idUrlBuilder: services.IdentityUrlBuilder, resetPasswordForm: Form[(String, String)], token : String)(implicit request: RequestHeader )
 
 @import views.html.fragments.form.idInputPassword
+@import form.IdFormHelpers._
 
 @main(page, Switches.all){
 }{
